--- a/app/blog/posts/graph-theory-cpp.mdx
+++ b/app/blog/posts/graph-theory-cpp.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Getting Started with C++ Development'
+title: 'Graph Theory with C++'
 publishedAt: '2025-05-01'
 summary: 'Learn how to implement and explore graph theory concepts like DFS, BFS, and shortest paths using C++.'
 ---
@@ -23,7 +23,7 @@ int main() {
     adj[2].push_back(3);
     adj[3].push_back(4);
 
-    // Print adjacency list
+    // print adjacency list
     for (int i = 0; i < n; i++) {
         cout << "Node " << i << ": ";
         for (int neighbor : adj[i])
